--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,500&display=swap");
 *,
 *::before,
 *::after {
@@ -13,6 +14,12 @@ body,
   width: 100vw;
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
+  font-weight: 350;
+  scroll-behavior: smooth;
+
+  // &::-webkit-scrollbar {
+  //   display: none !important;
+  // }
 }
 
 .content {
@@ -29,6 +36,14 @@ body,
   }
 }
 
+@media only screen and (max-width: 40em) {
+  .content {
+    flex-direction: column;
+    padding: 1rem;
+    align-items: center;
+  }
+}
+
 .products {
   padding: 30px 50px;
   display: flex;
@@ -42,6 +57,15 @@ body,
   .right {
     flex: 3;
   }
+}
+
+.favoutite {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
+  font-size: 18px;
 }
 
 a,
@@ -64,4 +88,30 @@ a:active {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+@media only screen and (max-width: 40em) {
+  .products {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+    width: 100%;
+
+    .left {
+      display: none;
+    }
+
+    .right {
+      width: 100%;
+    }
+  }
+
+  .favoutite {
+    width: 500px;
+    text-align: center;
+
+    h2 {
+      font-size: 21px;
+    }
+  }
 }
