--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -20,7 +20,7 @@
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       position: absolute;
     }
 
@@ -32,8 +32,8 @@
       position: absolute;
       top: 5px;
       left: 5px;
-      background-color: white;
-      color: teal;
+      background-color: black;
+      color: white;
       padding: 3px 5px;
       z-index: 3;
       font-size: 12px;
@@ -48,11 +48,12 @@
 
     .icon {
       width: 1.2rem;
+      z-index: 999;
     }
   }
 
   h2 {
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 400;
   }
 
@@ -60,11 +61,14 @@
     h3 {
       font-size: 18px;
       font-weight: 500;
-
-      &:first-child {
-        color: gray;
-        text-decoration: line-through;
-      }
     }
+  }
+}
+
+@media screen and (max-width: 40em) {
+  .card {
+    width: 170px;
+    flex-wrap: wrap;
+    gap: 10px;
   }
 }
