--- a/src/components/Cart/CartItem.module.scss
+++ b/src/components/Cart/CartItem.module.scss
@@ -12,7 +12,7 @@
   .details {
     display: flex;
     flex-direction: column;
-
+    width: 300px;
     p {
       font-size: 14px;
       margin-bottom: 1rem;
@@ -21,6 +21,10 @@
     .price {
       font-size: 16px;
       margin-bottom: 1rem;
+    }
+
+    .size {
+      font-size: 14px;
     }
   }
 }
