--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,6 +1,17 @@
 .input {
-  margin-bottom: 10px;
   label {
-    margin-left: 10px;
+    font-size: 16px;
   }
+  input {
+    margin-bottom: 10px;
+    margin-right: 10px;
+    outline: none;
+  }
+}
+
+.inputText {
+  width: 100%;
+  height: 35px;
+  border: none;
+  margin-top: 1rem;
 }
