--- a/src/components/InputForm/InputForm.module.scss
+++ b/src/components/InputForm/InputForm.module.scss
@@ -1,6 +1,5 @@
 form {
   width: 100%;
-  // height: 100vh;
 
   .formData {
     display: flex;
@@ -30,5 +29,14 @@ form {
     color: red;
     font-size: 14px;
     margin-top: none;
+  }
+}
+
+@media only screen and (max-width: 40em) {
+  form {
+    input {
+      width: 170px;
+      height: 30px;
+    }
   }
 }
