--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,52 +1,173 @@
-.navbar {
-  height: 80px;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  z-index: 999;
+  padding: 0 20px;
+  position: sticky;
 
-  .navWrapper {
-    padding: 10px 30px;
+  h2 {
+    font-family: "Montserrat", sans-serif;
+  }
+
+  .item {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    font-size: 18px;
+  }
 
-    .item {
-      display: flex;
-      align-items: center;
-      font-size: 18px;
+  .navBtn {
+    background: transparent;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 5px;
+    display: none;
+    border: none;
+    color: #777;
+  }
+
+  .right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+
+  form {
+    position: relative;
+    transition: all;
+    width: 50px;
+    height: 40px;
+    box-sizing: border-box;
+    border-radius: 25px;
+    border: none;
+
+    input {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      outline: 0;
+      border: none;
+      background: rgb(180, 178, 178);
+      display: none;
+      font-size: 16px;
+      border-radius: 20px;
+      padding: 0 40px;
     }
-    .left {
-      font-size: 30px;
-      letter-spacing: 2px;
+
+    .searchIcon {
+      color: rgb(55, 55, 55);
+      box-sizing: border-box;
+      width: 55px;
+      height: 55px;
+      position: absolute;
+      text-align: center;
+    }
+  }
+
+  form:hover,
+  form:valid {
+    width: 200px;
+    cursor: pointer;
+    transition: all 0.6s ease-out;
+  }
+
+  form:hover input,
+  form:valid input {
+    display: block;
+    // transition: all 0.6s ease-in;
+  }
+
+  .icons {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    color: #777;
+    cursor: pointer;
+
+    a {
+      color: #777;
     }
 
-    .right {
-      display: flex;
-      align-items: center;
-      gap: 25px;
+    .cart-icon {
+      position: relative;
 
-      .icons {
+      span {
+        font-size: 12px;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: #2879fe;
+        color: white;
+        position: absolute;
+        right: -10px;
+        top: -10px;
         display: flex;
-        gap: 15px;
-        color: #777;
-        cursor: pointer;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+  }
+  // }
+}
 
-        .cart-icon {
-          position: relative;
+@media screen and (max-width: 40em) {
+  nav {
+    h2 {
+      font-size: 22px;
+    }
+    .right {
+      .items {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: inherit;
+        font-size: 1.5rem;
+        transition: all ease-out;
+        transform: translateY(-100vh);
 
-          span {
-            font-size: 12px;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background-color: #2879fe;
-            color: white;
-            position: absolute;
-            right: -10px;
-            top: -10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
+        div {
+          position: fixed;
+          top: 0;
+          left: 0;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 1.5rem;
+          font-size: 1.5rem;
+          width: 100%;
+          height: 100%;
         }
       }
+    }
+
+    form:hover,
+    form:valid {
+      width: 150px;
+      cursor: pointer;
+      transition: all 0.6s ease-out;
+    }
+
+    .navBtn {
+      display: block;
+    }
+
+    .responsive_nav {
+      transform: none;
+    }
+
+    .navCloseBtn {
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
     }
   }
 }
