--- a/src/components/ProductItem/ProductItem.module.scss
+++ b/src/components/ProductItem/ProductItem.module.scss
@@ -1,12 +1,15 @@
 .product {
   display: flex;
   padding: 20px 50px;
+  justify-content: space-between;
   gap: 50px;
 
   .productLeft {
-    flex: 1;
+    flex: 3;
     display: flex;
     gap: 20px;
+    // border: 5px solid black;
+    width: 100%;
 
     .images {
       flex: 1;
@@ -25,7 +28,7 @@
       img {
         width: 100%;
         max-height: 600px;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
   }
@@ -35,6 +38,16 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    width: 100%;
+
+    .size {
+      max-width: 450px;
+    }
+
+    h1 {
+      font-size: 30px;
+      width: 500px;
+    }
 
     .price {
       font-size: 30px;
@@ -43,9 +56,9 @@
     }
 
     p {
-      font-size: 18px;
+      font-size: 17px;
       font-weight: 300;
-      width: 400px;
+      width: 500px;
       text-align: justify;
     }
 
@@ -62,52 +75,44 @@
       gap: 10px;
       width: 130px;
       border: 1px solid black;
+    }
 
-      button {
-        width: 50px;
-        height: 50px;
+    .addItem {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+
+      a {
+        color: #9fa2a6;
+      }
+      .add {
+        width: 250px;
+        padding: 15px;
+        background-color: black;
+        color: white;
         display: flex;
         align-items: center;
         justify-content: center;
+        gap: 20px;
         cursor: pointer;
         border: none;
-        background-color: white;
-
-        &:hover {
-          background-color: rgb(196, 194, 194);
-          transition: 400ms ease;
-        }
+        font-weight: 500;
       }
     }
-
-    .add {
+    .item {
       width: 250px;
-      padding: 10px;
-      background-color: black;
-      color: white;
+      padding: 15px;
+      border-radius: 2rem;
       display: flex;
+      flex-direction: row;
       align-items: center;
       justify-content: center;
-      gap: 20px;
+      border: 1px solid black;
+      font-size: 16px;
       cursor: pointer;
-      border: none;
-      font-weight: 500;
-    }
 
-    .links {
-      display: flex;
-      gap: 20px;
-
-      .item {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        color: #9fa2a6;
-        font-size: 14px;
-        cursor: pointer;
-      }
-      &:hover {
-        opacity: 0.5;
+      .icon {
+        font-size: 12px;
       }
     }
 
@@ -128,6 +133,52 @@
 
     hr {
       border: 1px solid rgb(238, 237, 237);
+    }
+  }
+}
+@media screen and (max-width: 40em) {
+  .product {
+    padding: 1rem;
+    flex-direction: column;
+
+    .productLeft {
+      .images {
+        img {
+          height: 5.5rem;
+        }
+      }
+    }
+
+    .productRight {
+      width: 100%;
+      gap: 20px;
+      h1 {
+        font-size: 18px;
+        width: 100%;
+      }
+
+      .quantity {
+        display: none;
+      }
+
+      .price {
+        font-size: 18px;
+      }
+
+      .addItem {
+        .add {
+          width: 100%;
+        }
+      }
+
+      .item {
+        width: 100%;
+      }
+      .links {
+        .item:hover {
+          background-color: #9fa2a6;
+        }
+      }
     }
   }
 }
