--- a/src/components/ProductsItems/ProductsItems.module.scss
+++ b/src/components/ProductsItems/ProductsItems.module.scss
@@ -3,3 +3,9 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
+@media only screen and (max-width: 40em) {
+  .list {
+    flex-wrap: wrap;
+  }
+}
