--- a/src/components/SelectSize/SelectSize.module.scss
+++ b/src/components/SelectSize/SelectSize.module.scss
@@ -1,11 +1,6 @@
-.select {
-  width: 70px;
-  height: 50px;
-  border: none;
-  select {
-    height: 50px;
-    width: 70px;
-    padding: 0.3rem;
-    border: 1px solid black;
+.size {
+  h4 {
+    font-size: 16px;
+    margin-bottom: 0.5rem;
   }
 }
