--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,500&display=swap");
+
+$font-size-root: 0.9rem;
+$h1-font-size: 1.5rem;
+$h2-font-size: 1.3rem;
+$h3-font-size: 1.2rem;
+$h4-font-size: 1rem;
+$h5-font-size: 0.9rem;
+$h6-font-size: 0.8rem;
+
+$position-values: (
+  0: 0,
+  10: 10%,
+  20: 20%,
+  30: 30%,
+  40: 40%,
+  50: 50%,
+  100: 100%,
+);
+
+@import "~bootstrap/scss/bootstrap";
 *,
 *::before,
 *::after {
@@ -13,61 +33,11 @@ body,
   height: 100vh;
   width: 100vw;
   font-family: "Poppins", sans-serif;
-  font-size: 1rem;
-  font-weight: 350;
+  scroll-behavior: auto;
   scroll-behavior: smooth;
-
-  // &::-webkit-scrollbar {
-  //   display: none !important;
-  // }
+  font-weight: 400;
+  font-size: 12px;
 }
-
-.content {
-  display: flex;
-  flex-direction: row;
-  padding: 30px 50px;
-  background-color: rgb(249, 247, 245);
-  .left {
-    flex: 1;
-  }
-
-  .right {
-    flex: 1;
-  }
-}
-
-@media only screen and (max-width: 40em) {
-  .content {
-    flex-direction: column;
-    padding: 1rem;
-    align-items: center;
-  }
-}
-
-.products {
-  padding: 30px 50px;
-  display: flex;
-
-  .left {
-    flex: 1;
-    height: 100%;
-    top: 50px;
-  }
-
-  .right {
-    flex: 3;
-  }
-}
-
-.favoutite {
-  margin-top: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  align-items: center;
-  font-size: 18px;
-}
-
 a,
 a:visited,
 a:active {
@@ -88,30 +58,4 @@ a:active {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
-
-@media only screen and (max-width: 40em) {
-  .products {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1rem;
-    width: 100%;
-
-    .left {
-      display: none;
-    }
-
-    .right {
-      width: 100%;
-    }
-  }
-
-  .favoutite {
-    width: 500px;
-    text-align: center;
-
-    h2 {
-      font-size: 21px;
-    }
-  }
 }
