--- a/src/components/Buttons/Buttons.module.scss
+++ b/src/components/Buttons/Buttons.module.scss
@@ -21,20 +21,43 @@
   font-weight: lighter;
   border: 0.6px solid #ccc;
   border-radius: 5px;
-  color: #323232;
+  color: #3a3939;
+  cursor: pointer;
+  margin-right: 6px;
+  margin-bottom: 0.5rem;
+  padding: 10px 15px;
+  max-width: 200px;
+}
+
+.btnSize {
+  background: transparent;
+  font-size: 15px;
+  font-weight: lighter;
+  border: 0.6px solid #ccc;
+  border-radius: 5px;
+  color: #3a3939;
   cursor: pointer;
   margin-right: 6px;
   margin-bottom: 0.5rem;
   padding: 10px 20px;
-  width: 100px;
+  width: 200px;
+  height: 55px;
 }
-
 @media screen and (max-width: 40em) {
   .btnSmall {
+    padding: 3px 10px;
+    height: 35px;
     &:hover {
       transform: scale(1.1);
       transition: 0.3ms ease-in-out;
       border: 1px solid #ccc;
     }
   }
+  .btnSize {
+    width: 100%;
+  }
+}
+
+.active {
+  border: 2px solid black;
 }
