--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,74 +1,14 @@
-.card {
-  width: 280px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-bottom: 1rem;
-
-  .image {
+.image {
+  img {
     width: 100%;
-    height: 400px;
-    overflow: hidden;
-    position: relative;
-
-    &:hover {
-      .secondImg {
-        z-index: 2;
-      }
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      position: absolute;
-    }
-
-    .mainImg {
-      z-index: 1;
-    }
-
-    span {
-      position: absolute;
-      top: 5px;
-      left: 5px;
-      background-color: black;
-      color: white;
-      padding: 3px 5px;
-      z-index: 3;
-      font-size: 12px;
-      font-weight: 500;
-    }
-  }
-
-  .title {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    .icon {
-      width: 1.2rem;
-      z-index: 999;
-    }
-  }
-
-  h2 {
-    font-size: 15px;
-    font-weight: 400;
-  }
-
-  .prices {
-    h3 {
-      font-size: 18px;
-      font-weight: 500;
-    }
+    height: 100%;
+    aspect-ratio: inherit;
+    object-fit: contain;
+    margin-bottom: 0.5rem;
   }
 }
 
-@media screen and (max-width: 40em) {
-  .card {
-    width: 170px;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
+.icon {
+  width: 1.2rem;
+  z-index: 999;
 }
