--- a/src/components/InputForm/InputForm.module.scss
+++ b/src/components/InputForm/InputForm.module.scss
@@ -1,10 +1,9 @@
 form {
   width: 100%;
-
   .formData {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 2rem;
   }
 
   label {
@@ -14,7 +13,7 @@ form {
   input {
     margin-bottom: 1.5rem;
     height: 45px;
-    width: 250px;
+    width: 14 + 5vw;
     outline: none;
     border: 1px solid grey;
     border-radius: 0.3rem;
