--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -6,6 +6,11 @@ nav {
   z-index: 999;
   padding: 0 20px;
   position: sticky;
+  position: -webkit-sticky;
+
+  &.nav-bg {
+    background-color: black;
+  }
 
   h2 {
     font-family: "Montserrat", sans-serif;
@@ -39,11 +44,11 @@ nav {
   form {
     position: relative;
     transition: all;
-    width: 50px;
-    height: 40px;
+    width: 35px;
     box-sizing: border-box;
     border-radius: 25px;
     border: none;
+    padding-left: 0.3rem;
 
     input {
       position: absolute;
@@ -58,15 +63,6 @@ nav {
       font-size: 16px;
       border-radius: 20px;
       padding: 0 40px;
-    }
-
-    .searchIcon {
-      color: rgb(55, 55, 55);
-      box-sizing: border-box;
-      width: 55px;
-      height: 55px;
-      position: absolute;
-      text-align: center;
     }
   }
 
@@ -86,9 +82,9 @@ nav {
   .icons {
     display: flex;
     flex-direction: row;
-    gap: 15px;
     color: #777;
     cursor: pointer;
+    gap: 10px;
 
     a {
       color: #777;
@@ -118,6 +114,7 @@ nav {
 
 @media screen and (max-width: 40em) {
   nav {
+    // height: 40px;
     h2 {
       font-size: 22px;
     }
