--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,12 +1,13 @@
 .footer {
-  margin: 100px 100px 20px 100px;
-
+  background-color: #000;
+  color: #fff;
   .top {
     display: flex;
     gap: 50px;
 
     .item {
       flex: 1;
+      margin-top: 1rem;
       display: flex;
       flex-direction: column;
       gap: 10px;
@@ -16,11 +17,6 @@
       h1 {
         font-size: 18px;
         font-weight: 500;
-        color: #555;
-      }
-
-      span {
-        color: #555;
       }
     }
   }
@@ -57,7 +53,6 @@
 
 @media screen and (max-width: 40em) {
   .footer {
-    margin: 1rem;
     gap: 10px;
 
     .top {
