--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,14 +1,17 @@
-.image {
-  img {
-    width: 100%;
-    height: 100%;
-    aspect-ratio: inherit;
-    object-fit: contain;
-    margin-bottom: 0.5rem;
+.card {
+  height: 100%;
+  .image {
+    img {
+      width: 100%;
+      height: 100%;
+      aspect-ratio: inherit;
+      object-fit: contain;
+      margin-bottom: 0.5rem;
+    }
   }
-}
 
-.icon {
-  width: 1.2rem;
-  z-index: 999;
+  .icon {
+    width: 1.2rem;
+    z-index: 999;
+  }
 }
