--- a/src/components/InputForm/InputForm.module.scss
+++ b/src/components/InputForm/InputForm.module.scss
@@ -1,19 +1,14 @@
 form {
   width: 100%;
-  .formData {
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-  }
 
   label {
     font-size: 14px;
   }
 
   input {
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
     height: 45px;
-    width: 14 + 5vw;
+    width: 100%;
     outline: none;
     border: 1px solid grey;
     border-radius: 0.3rem;
@@ -31,11 +26,13 @@ form {
   }
 }
 
-@media only screen and (max-width: 40em) {
+@media only screen and (max-width: 28em) {
   form {
+    width: 100%;
     input {
-      width: 170px;
-      height: 30px;
+      width: 100%;
+
+      height: 40px;
     }
   }
 }
