--- a/src/components/Products/ProductItem/ProductItem.module.scss
+++ b/src/components/Products/ProductItem/ProductItem.module.scss
@@ -1,21 +1,22 @@
 .product {
   display: flex;
-  padding: 20px 50px;
   justify-content: space-between;
-  gap: 50px;
+  gap: 20px;
+  width: 100vw;
 
   .productLeft {
-    flex: 3;
+    flex: 2;
     display: flex;
     gap: 20px;
     width: 100%;
 
     .images {
       flex: 1;
-
       img {
+        min-width: 60px;
         width: 100%;
-        height: 150px;
+        height: 100%;
+        max-height: 150px;
         object-fit: cover;
         cursor: pointer;
         margin-bottom: 10px;
@@ -23,36 +24,21 @@
     }
     .mainImg {
       flex: 4;
-
       img {
         width: 100%;
-        max-height: 600px;
+        min-width: 100px;
+        max-height: 500px;
         object-fit: contain;
       }
     }
   }
 
   .productRight {
-    flex: 0.5;
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 10px;
     width: 100%;
-
-    .size {
-      max-width: 500px;
-    }
-
-    h1 {
-      font-size: 30px;
-      width: 500px;
-    }
-
-    .price {
-      font-size: 30px;
-      color: black;
-      font-weight: 500;
-    }
 
     p {
       font-size: 17px;
@@ -143,10 +129,9 @@
     }
   }
 }
-@media screen and (max-width: 40em) {
+@media screen and (max-width: 48em) {
   .product {
     overflow: hidden;
-    padding: 1rem;
     flex-direction: column;
 
     .productLeft {
