--- a/src/components/Skeleton/CardSkeleton.module.scss
+++ b/src/components/Skeleton/CardSkeleton.module.scss
@@ -1,31 +1,17 @@
 .card {
-  // width: 12.3 + 5vw;
-  width: 18.3 + 5vw;
   margin-bottom: 1rem;
   .skeleton {
     width: 100%;
-    height: 25 + 5vw;
+
+    height: 280px;
   }
 }
 
-@media screen and (max-width: 48em) {
+@media screen and (max-width: 28em) {
   .card {
-    // width: 12.3 + 5vw;
-    width: 14 + 5vw;
-    margin-bottom: 1rem;
     .skeleton {
       width: 100%;
-      height: 20 + 5vw;
-    }
-  }
-
-  @media screen and (max-width: 28em) {
-    .card {
-      width: 95 + 5vw;
-      .skeleton {
-        width: 100%;
-        height: 105 + 1vw;
-      }
+      height: 300px;
     }
   }
 }
